<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello DoubanApi!</string>
    <string name="lib_name">DoubanApi</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="login_title">Sign in</string>
    <string name="user_name_hint">user name</string>
    <string name="password_hint">password</string>
    <string name="button_login">Sign in</string>
</resources>
