<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:fillViewport="true"
            xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:background="#f6eecd" android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_alignParentTop="true"
                android:id="@+id/navigatebar"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/title_bar"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8.0dip"
                android:paddingRight="8.0dip"
                android:paddingTop="6.0dip">

            <Button
                    android:id="@+id/gobackbt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/title_bar_button"
                    android:paddingLeft="4.0dip"
                    android:paddingRight="4.0dip"
                    android:text="@string/cancel"
                    android:textColor="#ffffffff"
                    android:textSize="14.0dip"/>

            <TextView
                    android:id="@+id/title"
                    style="@style/title_shadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8.0dip"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="#ffffffff"/>
        </RelativeLayout>

        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical"
                      android:layout_below="@id/navigatebar"
                      android:id="@+id/container_header" android:padding="10.0dip" android:layout_width="fill_parent"
                      android:layout_height="wrap_content">

            <RelativeLayout android:id="@+id/container_name" android:background="@drawable/shape_editbox_unfocused"
                            android:padding="5.0dip" android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/text_username" android:background="@android:color/white"
                                      android:padding="2.0dip" android:nextFocusDown="@+id/passwordText"
                                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                                      android:hint="@string/user_name_hint"
                                      android:layout_centerVertical="true" android:inputType="textEmailAddress"
                                      android:textCursorDrawable="@null" style="@style/font18_black_style"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/container_pwd" android:background="@drawable/shape_editbox_unfocused"
                            android:padding="5.0dip" android:layout_width="fill_parent"
                            android:layout_height="wrap_content" android:layout_marginTop="10.0dip">

                <EditText android:id="@+id/text_password" android:background="@android:color/white"
                          android:padding="2.0dip" android:nextFocusDown="@+id/button_login"
                          android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:hint="@string/password_hint" android:layout_toLeftOf="@+id/button_clearpwd"
                          android:layout_centerVertical="true" android:inputType="textPassword"
                          android:textCursorDrawable="@null" style="@style/font18_black_style"/>
            </RelativeLayout>

                <Button android:id="@+id/button_login" android:nextFocusDown="@+id/text_register"
                        android:background="@drawable/btn_send"
                        android:textSize="18sp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_width="wrap_content" android:layout_height="40dp"
                        android:layout_marginTop="20.0dip"
                        android:text="@string/button_login" android:enabled="false"/>
                <View android:layout_width="10dp" android:layout_height="wrap_content"/>



        </LinearLayout>
    </RelativeLayout>
</ScrollView>